--- a/freelance_web_app/docker-compose.yml
+++ b/freelance_web_app/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build: .
     restart: always
     command: >
-      sh -c "python manage.py migrate && pyhon manage.py runserver 0.0.0.0:8000"
+      sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
     ports:
       - 8000:8000
     volumes:
