--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django = "^5.1"
 django-dotenv = "^1.4.2"
 tzdata = "^2024.1"
 pillow = "^10.4.0"
+django-countries = "^7.6.1"
 
 
 [tool.poetry.group.dev.dependencies]
