--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,17 @@
+
 services:
   web:
-    build: freelance_web_app
+    build:
+      context: .
+      dockerfile: Dockerfile
     restart: always
-
     command: >
-      sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+      sh -c "python freelance_web_app/manage.py migrate && python freelance_web_app/manage.py runserver 0.0.0.0:8000"
     ports:
       - "8000:8000"
     volumes:
-      - /code/freelance_web_app
+      - .:/code
+    working_dir: /code
     depends_on:
       - db
 
@@ -21,4 +24,3 @@ services:
       POSTGRES_PASSWORD: postgres
     ports:
       - "5433:5432"
-
