--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ SECRET_KEY='django-insecure-fl-n96m3*&owsr)b8l*gd7kdwk%js5saef1inydrt9ms#46q0k'
 POSTGRESQL_DATABASE=django_project
 POSTGRESQL_USER=postgres
 POSTGRESQL_PASSWORD=postgres
-POSTGRESQL_HOST=localhost
+POSTGRESQL_HOST=db
 POSTGRESQL_PORT=5432
-#172.17.0.1
-# localhost for 'python manage.py runserver'
 
+# localhost for 'python manage.py runserver'
+#172.17.0.1
