--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ django-dotenv = "^1.4.2"
 tzdata = "^2024.1"
 pillow = "^10.4.0"
 django-countries = "^7.6.1"
+#django-widget-tweaks = "^1.5.0"
 
 
 [tool.poetry.group.dev.dependencies]
