--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 DEBUG=True
 SECRET_KEY='django-insecure-fl-n96m3*&owsr)b8l*gd7kdwk%js5saef1inydrt9ms#46q0k'
 
-POSTGRESQL_DATABASE=django_project
-POSTGRESQL_USER=postgres
-POSTGRESQL_PASSWORD=postgres
-POSTGRESQL_HOST=db
-POSTGRESQL_PORT=5432
+POSTGRES_DATABASE=freelance_application
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_ROOT_PASSWORD=user
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
 #172.17.0.1
-# localhost for 'python manage.py runserver'
 
