--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,26 @@
 services:
   web:
-    build: freelance_web_app
-    restart: always
-
-    command: >
-      sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+    build:
+      context: .
+    volumes:
+      - ./web_application:/web
+    env_file:
+      - .env
     ports:
       - "8000:8000"
-    volumes:
-      - /code/freelance_web_app
+    restart: on-failure
+    command: >
+      sh -c "python manage.py runserver 0.0.0.0:8000"
     depends_on:
       - db
 
   db:
     image: postgres:13-alpine
-    restart: always
-    environment:
-      POSTGRES_DB: django_project
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+    env_file:
+      - .env
+    volumes:
+      - ./postgres:/var/lib/postgresql
     ports:
-      - "5433:5432"
+      - "5435:5432"
+    restart: on-failure
 
