--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,14 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-django = "^5.1"
+django = "5.1.1"
 django-dotenv = "^1.4.2"
 tzdata = "^2024.1"
+psycopg2 = "^2.9.9"
 
+
+[tool.poetry.group.dev.dependencies]
+isort = "^5.13.2"
 
 [build-system]
 requires = ["poetry-core"]
