--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ django-dotenv = "^1.4.2"
 tzdata = "^2024.1"
 psycopg2 = "^2.9.9"
 pillow = "^10.4.0"
+django-countries = "^7.6.1"
 
 
 [tool.poetry.group.dev.dependencies]
